--- a/style/first.css
+++ b/style/first.css
@@ -5,46 +5,52 @@ body{
     overflow:scroll-x;
 }
 
+.big-cont{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
 .contain{
-    position: center;
-    margin:10%;
-    margin-left:20% ;
+    
     text-align:center;
-    border: 5px solid white;
     color:white;
     font-family:'Times New Roman', Times, serif;
-    font-size:30px;
+    font-size:200%;
     font-weight: bolder;
-    padding:2%;
-    width:60%;
+    padding:6%;
+    width: 100%;
 }
 
 .explain{
     text-align:center;
     font-family: "Arial Black", Gadget, sans-serif;
     font-size:35px;
-    margin:5%
+    margin-top: 100px;
 }
 
 .box{
-    padding:5px;
-    width:15%;
-    border-radius:20%;
-    font-size:20px;
+    padding:20px;
+    width:75%;
+    border-radius:20px;
+    font-family:'Times New Roman', Times, serif;
+    font-size:30px;
     font-weight: bolder;
-    margin:10px;
+    margin:20px 0px;
     border: 3px solid white;
 }
 
 .enter{
+    padding: 10px 20px;
     margin-top: 50px;
     font-family: 'Times New Roman', Times, serif;
-    color: rgb(78, 77, 77);
-    font-size: 25px;
+    font-weight: bolder;
+    color:white ;
+    font-size: 40px;
     border: 3px solid white;
     border-radius: 35%;
+    background-color: initial;
+
 }
 
-.day_tab{
-    display:inline;
-}
+
