--- a/style/index.css
+++ b/style/index.css
@@ -1,15 +1,17 @@
 body{
-    background: rgb(21,41,205);
     background: linear-gradient(90deg, rgba(21,41,205,1) 0%, 
                     rgba(48,114,201,1) 50%, rgba(38,255,251,1) 100%);
     overflow:scroll-x;
 }
 
+.big_content_0{
+    display:flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
 .page_content{
-    margin: 145px 25%;
-    width: 45%;
-    
-    
+    width: 90%;
 }
 
 .days{
@@ -17,7 +19,7 @@ body{
     background-color: initial;
     border:none;
     font-family:'Times New Roman', Times, serif;
-    font-size:20px;
+    font-size:100%;
     font-weight: bolder;
     padding:10px;
 }
@@ -27,7 +29,14 @@ body{
     justify-content:center;
     border: 2px solid white;
     background-color: white;
+    width:100% ;
     
+}
+
+.days_content{
+    display: none;
+    border: 2px solid white;
+    width:100% ;
 }
 
 table{
@@ -39,18 +48,20 @@ table{
 .header_tags{
     color:white;
     font-family:'Times New Roman', Times, serif;
-    font-size:20px;
+    font-size:140%;
     font-weight: bolder;
     text-align: center;
+
 }
 
 .time_label{
     color:black;
     font-family:'Times New Roman', Times, serif;
-    font-size:20px;
+    font-size:25px;
     font-weight: bolder;
     padding-left:50px;
-    width:25%;
+    width:40%;
+    margin: 10px 0px;
 }
 
 .ac_text{
@@ -60,7 +71,8 @@ table{
     color:whitesmoke;
     font-family:'Times New Roman', Times, serif;
     font-size:20px;
-    width: 70%;
+    width: 100%;
+    margin: 10px 0px;
     
 }
 
@@ -72,16 +84,11 @@ table{
     font-family:'Times New Roman', Times, serif;
     font-size:20px;
     width: 25%;
-    margin-left:100px
+    margin: 10px 39%;
 }
 
 .active{
     background-color:lightskyblue;
-}
-
-.days_content{
-    display: none;
-    border: 2px solid white;
 }
 
 #sub{
@@ -99,4 +106,26 @@ table{
     border:2px solid white;
     border-radius: 20px;
     padding:10px;
+}
+
+.big_content_1{
+    display: none;
+}
+
+@media only screen and (max-width: 675px){
+    .page_content{
+        width: 101%;
+    }
+
+    .days{
+        font-size: 14px;
+        padding:5px;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    .day_tab{
+        display: block;
+
+    }
 }
